--- a/index.html
+++ b/index.html
@@ -269,19 +269,9 @@ There are some areas that are safer to live than others.</p>
 If we look closer to each borough then are the races represented differently.
 For Berit race does not matter but it is an interesting that police register this.</p>
 
+<p><img src="/images/crime/combined_bar_crime.png" alt="arr" /></p>
 
-          <div class="grid vertical-align">
-            <div class="column">
-
-<p><img src="/images/crime/race_perc.png" alt="arr" /></p>
-
-</div>
-            <div class="column">
-
-<p><img src="/images/crime/arrest_b.png" alt="ar" /></p>
-
-</div>
-          </div> </div>
+ </div>
       </section>
       
       
@@ -358,6 +348,8 @@ Thus, for random crimes such as robberies and assaults, choosing areas with high
 
           <div class="grid vertical-align">
             <div class="column">
+
+<p><img src="/images/crime/arrest_b_p.png" alt="com" /></p>
 
 </div>
             <div class="column">
